# CI-CD-Pipeline

./: .gitignore  .gitmodules  README.md  api_testing.py  check_if_port_up.py  install.sh  pyproject.toml  requirements.txt  sast_analysis.py  test.py  test_endpoints.py  trivy_scanning.py
.github/: ci-cd.yml
.github/actions/CloneAndUpdate/: action.yml
.github/actions/InstallDependencies/: action.yml
.github/workflows/: ci-cd.yml  test.yml
