[tool.poetry]
name = "ci-cd-pipeline"
version = "0.1.0"
description = ""
authors = ["shreyas-acharya <acharyashreyas14@gmail.com>"]
readme = "README.md"
packages = [{include = "ci_cd_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"
semgrep = "^1.15.0"
requests = "^2.28.2"
jira = "^3.5.0"
python-dotenv = "^1.0.0"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
